# DP-Figures

./: CMakeLists.txt
src/: main.cpp
src/Factories/: AbstractFactory.cpp  AbstractFactory.h  FigureFactory.h  RandomFigureFactory.cpp  RandomFigureFactory.h  StreamFigureFactory.cpp  StreamFigureFactory.h  StringToFigure.cpp  StringToFigure.h
src/Figures/: Circle.cpp  Circle.h  Figure.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  string_convertable.h
src/UserAPI/: Manager.cpp  Manager.h
src/Utils/: CinRedirect.cpp  CinRedirect.h  Exceptions.cpp  Exceptions.h  Predicates.cpp  Predicates.h  Readers.cpp  Readers.h
test/: factory-tests.cpp  figure-tests.cpp  manager-tests.cpp  test1.txt  test2.txt  utils-tests.cpp
